--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Proyecto de innovación 2018</title>
+    <title>INNOVATION PROJECT 2018</title>
 </head>
 <body>
     <div id="top">
@@ -20,24 +20,24 @@
     <nav class="main-nav" id="main-nav">
 		<ul class="main-menu" id="main-menu">
 			<li><a href="index.html">Inicio</a></li>
-            <li><a href="">Acerca de Nosotros</a>
+            <li><a href="">About Us</a>
 				<ul>
-                    <li><a href="Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante5.html">Integrante 5</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante1.html">Jorge Aguero</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante2.html">Marvin Ballenas</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante3.html">Jilmar Nuñez</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante4.html">Ricardo Tenorio</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante5.html">Join Us</a></li>
                 </ul>
              </li>
-            <li><a href="Proyecto_Innovacion.html">Proyecto de Innovación</a>
+            <li><a href="Proyecto_Innovacion.html">Innovation Project</a>
                 <ul>
-                    <li><a href="Actividades/Actividad1.html">Actividad 1: Emprendimiento</a></li>
-                    <li><a href="Actividades/Actividad2.html">Actividad 2: Problemas</a></li>
-                    <li><a href="Actividades/Actividad3.html">Actividad 3: Oportunidades</a></li>
-                    <li><a href="Actividades/Actividad4.html">Actividad 4: Modelo de Negocio</a></li>
-                    <li><a href="Actividades/Actividad5.html">Actividad 5: Prototipo</a></li>
-                    <li><a href="Actividades/Actividad6.html">Actividad 6: Mercado</a></li>
-                    <li><a href="Proyecto_Final/Informe_Final.html">Informe Final: StartUp</a></li>
+                    <li><a href="Actividades/Actividad1.html">Emprendimiento</a></li>
+                    <li><a href="Actividades/Actividad2.html">Problemas</a></li>
+                    <li><a href="Actividades/Actividad3.html">Oportunidades</a></li>
+                    <li><a href="Actividades/Actividad4.html">Modelo de Negocio</a></li>
+                    <li><a href="Actividades/Actividad5.html">Prototipo</a></li>
+                    <li><a href="Actividades/Actividad6.html">Mercado</a></li>
+                    <li><a href="Proyecto_Final/Informe_Final.html">StartUp</a></li>
                 </ul>
             </li>
 		</ul>
@@ -51,7 +51,7 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p><h4>"Escribir el título del Proyecto"</h4></p>
+                    <p><h4><i>"Así es como se pone un texto en cursiva"<i></h4></p>
                     <p>Escribir descripción del problema a resolver.</p>
                     <p>Escribir descripción de página web como herramienta de control de avances.</p>
 
@@ -64,7 +64,7 @@
     <div id="about">
         <div class="about">
             <div class="title">
-                <h4>Acerca de Nosotros</h4>
+                <h4>More Aboout Us</h4>
             </div>
             <div class="about__content">
                 <p>Describir el equipo de trabajo sus actividades en las que son realmente hábiles</p>
@@ -75,19 +75,19 @@
     <div id="team">
         <div class="team">
             <div class="title">
-                <h4>Nuestro Equipo</h4>
+                <h4>Our Team</h4>
             </div>
             <div class="team__item">
                 <div class="team__item__img">
                     <img src="img/Foto_Integrante_1.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                    <p class="team__item__description__name">Integrante 1</p>
+                    <p class="team__item__description__name">Jorge Aguero</p>
                     <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                     <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                     <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
                     <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                    <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                    <a href="mailto:jorge.aguero@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -95,12 +95,12 @@
                     <img src="img/Foto_Integrante_2.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Integrante 2</p>
+                  <p class="team__item__description__name">Marvin Ballenas</p>
                   <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
                   <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <a href="mailto:marvinroodwell.balle@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -108,12 +108,12 @@
                     <img src="img/Foto_Integrante_3.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Integrante 3</p>
+                  <p class="team__item__description__name">Jilmar Nuñez</p>
                   <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
                   <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <a href="mailto:jilmar.nunez@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -121,27 +121,15 @@
                         <img src="img/Foto_Integrante_4.jpg" alt="">
                     </div>
                     <div class="team__item__description">
-                      <p class="team__item__description__name">Integrante 4</p>
+                      <p class="team__item__description__name">Ricardo Tenorio</p>
                       <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                       <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                      <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                      <a href="mailto:ricardo.tenorio@tecsup.edu.pe" class="team__item__description__mail">Write me</a>
                     </div>
                 </div>
-                <div class="team__item">
-                        <div class="team__item__img">
-                            <img src="img/Foto_Integrante_5.jpg" alt="">
-                        </div>
-                        <div class="team__item__description">
-                          <p class="team__item__description__name">Integrante 5</p>
-                          <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                          <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                          <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                          <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                          <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
-                        </div>
-                    </div>
+
         </div>
     </div>
 
