--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="nav-toggle" id="main-nav-toggle"><i class="icon-navicon"></i></div>
     <nav class="main-nav" id="main-nav">
 		<ul class="main-menu" id="main-menu">
-			<li><a href="index.html">Inicio</a></li>
+			<li><a href="index.html">Home</a></li>
             <li><a href="">About Us</a>
 				<ul>
                     <li><a href="Curriculum_Vitae/Integrante1.html">Jorge Aguero</a></li>
@@ -126,7 +126,7 @@
                       <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                      <a href="mailto:ricardo.tenorio@tecsup.edu.pe" class="team__item__description__mail">Write me</a>
+                      <p class="team__item__description__cal">Write me:<a href="mailto:ricardo.tenorio@tecsup.edu.pe" class="team__item__description__mail">ricardo.tenorio@tecsup.edu.pe</a>
                     </div>
                 </div>
 
