--- a/index.html
+++ b/index.html
@@ -51,8 +51,16 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p><h4><i>"Así es como se pone un texto en cursiva"<i></h4></p>
-                    <p>Escribir descripción del problema a resolver.</p>
+                    <p><H1><i>"BatterCase"<i></H1></p>
+                    <p><H2><strong><i>¿Como puedes cargar tu dispositivo movil sin un cargador convencional?<i></strong></H2></p>
+                    <p><H3><i>¡¡Aquí tienes la Solución!!<i></H3></p>
+                    <p><i>Un moderno sistema de carga, no depediente de energia eléctrica al alcance de tus manos.
+
+                          - Pequeño
+                          - Barato
+                          - Fácil de usar
+
+                                                                Muy Pronto... <i></p>
                     <p>Escribir descripción de página web como herramienta de control de avances.</p>
 
                 </div>
@@ -83,11 +91,11 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Jorge Aguero</p>
-                    <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                    <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                    <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                    <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                    <a href="mailto:jorge.aguero@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                    <p class="team__item__description__info">Me gusta investigar y construir cosas. Manejo muy bien las redes sociales.</p>
+                    <p class="team__item__description__cal">My Main Role in this Project: <strong>Comunicador</strong></p>
+                    <p class="team__item__description__cal">My secondary Role: <strong>Constructor</strong></p>
+                    <p class="team__item__description__cal">Numero de Celular: <strong>963382246</strong></p>
+                    <p class="team__item__description__cal">Write me: <a href="mailto:jorge.aguero@tecsup.edu.pe" class="team__item__description__mail">jorge.aguero@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -96,11 +104,11 @@
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Marvin Ballenas</p>
-                  <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                  <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                  <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:marvinroodwell.balle@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <p class="team__item__description__info">La lectura y la investigacion es una de mis mayores pasiones. Me gusta generar nuevas ideas y hacerlas realidad.</p>
+                  <p class="team__item__description__cal">My Main Role in this Project: <strong>Explorador</strong></p>
+                  <p class="team__item__description__cal">My Secondary Roles: <strong>Coordinador y Creativo</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>987444378</strong></p>
+                  <p class="team__item__description__cal">Write me: <a href="mailto:marvinroodwell.balle@tecsup.edu.pe" class="team__item__description__mail">marvinroodwell.balle@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -109,11 +117,11 @@
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Jilmar Nuñez</p>
-                  <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                  <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                  <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:jilmar.nunez@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <p class="team__item__description__info">Me gusta conocer gente nueva atravez de las redes sociales. Soy bueno organizando actividades.</p>
+                  <p class="team__item__description__cal">My Main Roles in this Project: <strong>Coordinador y Creativo</strong></p>
+                  <p class="team__item__description__cal">My Secondary Role: <strong>Comunicador</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>940462997</strong></p>
+                  <p class="team__item__description__cal">Write me: <a href="mailto:jilmar.nunez@tecsup.edu.pe" class="team__item__description__mail">jilmar.nunez@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -122,11 +130,11 @@
                     </div>
                     <div class="team__item__description">
                       <p class="team__item__description__name">Ricardo Tenorio</p>
-                      <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                      <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                      <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                      <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                      <p class="team__item__description__cal">Write me:<a href="mailto:ricardo.tenorio@tecsup.edu.pe" class="team__item__description__mail">ricardo.tenorio@tecsup.edu.pe</a>
+                      <p class="team__item__description__info">Las actividades que requieren gran habilidad y rapidez mental, son lo mío. Me gusta aprender nuvas formas de hacer las cosas.</p>
+                      <p class="team__item__description__cal">My Main Role in this Project: <strong>Constructor</strong></p>
+                      <p class="team__item__description__cal">My Secondary Role: <strong>Explorador</strong></p>
+                      <p class="team__item__description__cal">Numero de Celular: <strong>959186504</strong></p>
+                      <p class="team__item__description__cal">Write me: <a href="mailto:ricardo.tenorio@tecsup.edu.pe" class="team__item__description__mail">ricardo.tenorio@tecsup.edu.pe</a>
                     </div>
                 </div>
 
