--- a/index.html
+++ b/index.html
@@ -54,15 +54,19 @@
                     <p><H1><i>"BatterCase"<i></H1></p>
                     <p><H2><strong><i>¿Como puedes cargar tu dispositivo movil sin un cargador convencional?<i></strong></H2></p>
                     <p><H3><i>¡¡Aquí tienes la Solución!!<i></H3></p>
-                    <p><i>Un moderno sistema de carga, no depediente de energia eléctrica al alcance de tus manos.
+                    <p><i>Un moderno sistema de carga, no depediente de energia eléctrica al alcance de tus manos.<i></p>
 
-                          - Pequeño
-                          - Barato
-                          - Fácil de usar
+                    <p><i>  - Pequeño<i></p>
+                    <p><i>  - Barato<i></p>
+                    <p><i>  - Fácil de usar<i></p>
 
-                                                                Muy Pronto... <i></p>
-                    <p>Escribir descripción de página web como herramienta de control de avances.</p>
+                    <p><i>                                    Muy Pronto... <i></p>
 
+
+
+                    <p>Esta página se irá actualizando periódicamente con los avances del proyecto.</p>
+                    <p><H3>¿Quieres saber más?.</H3></p>
+                    <p>Comunícate con uno de nosotros.</p>
                 </div>
             </div>
 
@@ -148,10 +152,11 @@
             <div class="footer__licencia">
                 <p>Licencia:</p>
                 <img src="img/licencia.png" alt="">
+                <p>All Rights Reserved</p>
             </div>
             <div class="footer__copy">
                 <img src="img/fablab.png" alt="">
-                <p>&copy; 2018 - Diseñado por: <a href="colocar_correo_@tecsup.edu.pe">Colocar nombre del editor</a></p>
+                <p>&copy; 2018 - Diseñado por: <a href="colocar_correo_@tecsup.edu.pe"><H3><i>ROODWELL<i></H3></a></p>
             </div>
         </div>
     </footer>
