--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                     <p><H2><strong><i>¿Como puedes cargar tu dispositivo movil sin un cargador convencional?<i></strong></H2></p>
                     <p><H3><i>¡¡Aquí tienes la Solución!!<i></H3></p>
                     <p><i>Un moderno sistema de carga, no depediente de energia eléctrica al alcance de tus manos.<i></p>
-
                     <p><i>  - Pequeño<i></p>
                     <p><i>  - Barato<i></p>
                     <p><i>  - Fácil de usar<i></p>
@@ -79,7 +78,7 @@
                 <h4>More Aboout Us</h4>
             </div>
             <div class="about__content">
-                <p>Describir el equipo de trabajo sus actividades en las que son realmente hábiles</p>
+                <p>Apasionados por la tegnología, estudiantes de la carrera de Electronica, poseemos los conocimientos necesarios para hacer realidad este sueño.</p>
             </div>
         </div>
     </div>
