--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p><H1><i>"BatterCase"<i></H1></p>
+                    <p><center><H1><i>"BatterCase"<i></H1></center></p>
                     <p><H2><strong><i>¿Como puedes cargar tu dispositivo movil sin un cargador convencional?<i></strong></H2></p>
                     <p><H3><i>¡¡Aquí tienes la Solución!!<i></H3></p>
                     <p><i>Un moderno sistema de carga, no depediente de energia eléctrica al alcance de tus manos.<i></p>
@@ -61,11 +61,9 @@
 
                     <p><i>                                    Muy Pronto... <i></p>
 
-
-
                     <p>Esta página se irá actualizando periódicamente con los avances del proyecto.</p>
-                    <p><H3>¿Quieres saber más?.</H3></p>
-                    <p>Comunícate con uno de nosotros.</p>
+                    <p><H3>¿Quieres saber más?.</H3>    -Comunícate con uno de nosotros. </p>
+
                 </div>
             </div>
 
