--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -51,7 +51,10 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vStreYlmVsedKziRKn8YfnHv3MTF0smQQjtG4R-3k2F0ixPiZG127mnsA_3yI54tcEm_djZ-QtODVtD/pub?embedded=true"height="560" width="560"></iframe>
+
+                <iframe src="https://drive.google.com/file/d/1ByGqBqeheERTukU2XqTg3YqYmyguFuP7/view?usp=sharing URL PDF O DOCUMENTO&embedded=true" width="600" height="780" style="border: none;"></iframe>
+
+              <!--  <iframe src="https://docs.google.com/document/d/e/2PACX-1vStreYlmVsedKziRKn8YfnHv3MTF0smQQjtG4R-3k2F0ixPiZG127mnsA_3yI54tcEm_djZ-QtODVtD/pub?embedded=true"height="560" width="560"></iframe> -->
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
