--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -51,10 +51,8 @@
 
         <div class="think">
             <div class="think__img">
-
-                <embed src="https://drive.google.com/file/d/1ByGqBqeheERTukU2XqTg3YqYmyguFuP7/view?usp=sharing" type="application/pdf" width="800" height="600"></embed>
-
-              <!--  <iframe src="https://docs.google.com/document/d/e/2PACX-1vStreYlmVsedKziRKn8YfnHv3MTF0smQQjtG4R-3k2F0ixPiZG127mnsA_3yI54tcEm_djZ-QtODVtD/pub?embedded=true"height="560" width="560"></iframe> -->
+              <iframe src="https://docs.google.com/document/d/e/2PACX-1vTDK17gjENTY21kse_hVc1-IZCGCTUc2Z-GETDWe71z7D2ryvLHagAHF6hJ4e2F2uOQD0c3StoaiHUu/pub?embedded=true"height="560" width="560"></iframe>
+              <!--<iframe src="https://docs.google.com/document/d/e/2PACX-1vStreYlmVsedKziRKn8YfnHv3MTF0smQQjtG4R-3k2F0ixPiZG127mnsA_3yI54tcEm_djZ-QtODVtD/pub?embedded=true"height="560" width="560"></iframe>-->
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
