--- a/Curriculum_Vitae/Integrante2.html
+++ b/Curriculum_Vitae/Integrante2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>CV Integrante 2</title>
+    <title>Marvin Ballenas</title>
 </head>
 <body>
     <div id="top">
@@ -19,25 +19,24 @@
     <div class="nav-toggle" id="main-nav-toggle"><i class="icon-navicon"></i></div>
     <nav class="main-nav" id="main-nav">
 		<ul class="main-menu" id="main-menu">
-			<li><a href="../index.html">Inicio</a></li>
-            <li><a href="">Acerca de Nosotros</a>
+			<li><a href="../index.html">Home</a></li>
+            <li><a href="">About Us</a>
 				<ul>
-                    <li><a href="Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Integrante5.html">Integrante 5</a></li>
+                    <li><a href="Integrante1.html">Jorge Aguero</a></li>
+                    <li><a href="Integrante2.html">Marvin Ballenas</a></li>
+                    <li><a href="Integrante3.html">Jilmar Nuñez</a></li>
+                    <li><a href="Integrante4.html">Ricardo Tenorio</a></li>
                 </ul>
              </li>
-            <li><a href="">Proyecto de Innovación</a>
+            <li><a href="">Innovation Project</a>
                 <ul>
-                    <li><a href="../Actividades/Actividad1.html">Actividad 1: Emprendimiento</a></li>
-                    <li><a href="../Actividades/Actividad2.html">Actividad 2: Problemas</a></li>
-                    <li><a href="../Actividades/Actividad3.html">Actividad 3: Oportunidades</a></li>
-                    <li><a href="../Actividades/Actividad4.html">Actividad 4: Modelo de Negocio</a></li>
-                    <li><a href="../Actividades/Actividad5.html">Actividad 5: Prototipo</a></li>
-                    <li><a href="../Actividades/Actividad6.html">Actividad 6: Mercado</a></li>
-                    <li><a href="../Actividades/Informe_Final.html">Informe Final: StartUp</a></li>
+                    <li><a href="../Actividades/Actividad1.html">Emprendimiento</a></li>
+                    <li><a href="../Actividades/Actividad2.html">Problemas</a></li>
+                    <li><a href="../Actividades/Actividad3.html">Oportunidades</a></li>
+                    <li><a href="../Actividades/Actividad4.html">Modelo de Negocio</a></li>
+                    <li><a href="../Actividades/Actividad5.html">Prototipo</a></li>
+                    <li><a href="../Actividades/Actividad6.html">Mercado</a></li>
+                    <li><a href="../Actividades/Informe_Final.html">StartUp</a></li>
                 </ul>
             </li>
 		</ul>
@@ -46,7 +45,7 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Escribir Nombre de Integrante 2</h1>
+                <h1><i>Ballenas Zúñiga Marvin Roodwell</i></h1>
             </div>
             <div class="think__title__content">
         </div>
@@ -82,10 +81,11 @@
                 <div class="footer__licencia">
                     <p>Licencia:</p>
                     <img src="../img/licencia.png" alt="">
+                    <p>All Rights Reserved</p>
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:marvinroodwell.balle@tecsup.edu.pe"><H3><i>ROODWELL<i></H3></a></p>
                 </div>
             </div>
         </footer>
