--- a/Curriculum_Vitae/thiking.html
+++ b/Curriculum_Vitae/thiking.html
@@ -12,9 +12,9 @@
     <div class="nav-toggle" id="main-nav-toggle"><i class="icon-navicon"></i></div>
     <nav class="main-nav" id="main-nav">
         <ul class="main-menu">
-            <li><a href="./">Inicio</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="design.html">Design Thinking</a></li>
-            <li><a href="finalProject.html">Proyecto Final</a>
+            <li><a href="finalProject.html">INNOVATION PROJECT</a>
                 <ul>
                     <li><a href="#">Semana 1</a></li>
                     <li><a href="#">Semana 2</a></li>
@@ -62,9 +62,10 @@
                 <div class="footer__licencia">
                     <p>Licencia:</p>
                     <img src="img/licencia.png" alt="">
+                    <p>All Rights Reserved</p>
                 </div>
                 <div class="footer__copy">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:marvinroodwell.balle@tecsup.edu.pe"><H3><i>ROODWELL<i></H3></a></p>
                 </div>
             </div>
         </footer>
