--- a/Actividades/Actividad4.html
+++ b/Actividades/Actividad4.html
@@ -19,25 +19,24 @@
     <div class="nav-toggle" id="main-nav-toggle"><i class="icon-navicon"></i></div>
     <nav class="main-nav" id="main-nav">
             <ul class="main-menu" id="main-menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="">Acerca de nosotros</a>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="">About Us</a>
                     <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
+                      <li><a href="Curriculum_Vitae/Integrante1.html">Jorge Aguero</a></li>
+                      <li><a href="Curriculum_Vitae/Integrante2.html">Marvin Ballenas</a></li>
+                      <li><a href="Curriculum_Vitae/Integrante3.html">Jilmar Nuñez</a></li>
+                      <li><a href="Curriculum_Vitae/Integrante4.html">Ricardo Tenorio</a></li>
                     </ul>
                  </li>
-                <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
+                <li><a href="../Proyecto_Innovacion.html">Innovation Project</a>
                     <ul>
-                        <li><a href="Actividad1.html">Actividad 1: Emprendimiento</a></li>
-                        <li><a href="Actividad2.html">Actividad 2: Problema</a></li>
-                        <li><a href="Actividad3.html">Actividad 3: Oportunidades</a></li>
-                        <li><a href="Actividad4.html">Actividad 4: Modelo de Negocio</a></li>
-                        <li><a href="Actividad5.html">Actividad 5: Prototipo</a></li>
-                        <li><a href="Actividad6.html">Actividad 6: Mercado</a></li>
-                        <li><a href="Informe_Final.html">Informe Final: StartUp</a></li>
+                      <li><a href="../Actividades/Actividad1.html">Emprendimiento</a></li>
+                      <li><a href="../Actividades/Actividad2.html">Problemas</a></li>
+                      <li><a href="../Actividades/Actividad3.html">Oportunidades</a></li>
+                      <li><a href="../Actividades/Actividad4.html">Modelo de Negocio</a></li>
+                      <li><a href="../Actividades/Actividad5.html">Prototipo</a></li>
+                      <li><a href="../Actividades/Actividad6.html">Mercado</a></li>
+                      <li><a href="../Actividades/Informe_Final.html">StartUp</a></li>
                     </ul>
                 </li>
             </ul>
