--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -53,7 +53,7 @@
             <div class="think__img">
 
 
-             <object width="595" height="842"> <param name="MOVIE" value="monfichier.swf"> <param name="PLAY" value="true"> <param name="LOOP" value="true"> <param name="QUALITY" value="high"> <embed src="monfichier.swf" width="595" height="842" play="true" align="" loop="true" quality="high" TYPE="application/x-shockwave-flash" PLUGINSPAGE="[[[http://www.macromedia.com/go/getflashplay]e]r]"> </embed> </object>
+             <object width="595" height="842"> <param name="MOVIE" value="Actividad 1.swf"> <param name="PLAY" value="true"> <param name="LOOP" value="true"> <param name="QUALITY" value="high"> <embed src="Actividad 1.swf" width="595" height="842" play="true" align="" loop="true" quality="high" TYPE="application/x-shockwave-flash" PLUGINSPAGE="[[[http://www.macromedia.com/go/getflashplay]e]r]"> </embed> </object>
 
             </div>
             <div class="think__details">
