--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -52,10 +52,9 @@
         <div class="think">
             <div class="think__img">
 
+<iframe src="http://docs.google.com/gview?
+url=https://drive.google.com/drive/u/0/folders/1r3rI7GKN6Bz0LsGPCiMcD-wVdAtI1Koh/stuff/rubik.pdf&embedded=true" style="width:500px; height:375px;" frameborder="0"></iframe>
 
-             <object width="595" height="842"> <param name="MOVIE" value="Actividad 1.swf"> <param name="PLAY" value="true"> <param name="LOOP" value="true"> <param name="QUALITY" value="high"> <embed src="Actividad 1.swf" width="595" height="842" play="true" align="" loop="true" quality="high" TYPE="application/x-shockwave-flash" PLUGINSPAGE="[[[http://www.macromedia.com/go/getflashplay]e]r]"> </embed> </object>
-
-            </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
