--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -53,7 +53,7 @@
             <div class="think__img">
 
 <iframe src="http://docs.google.com/gview?
-url=https://drive.google.com/drive/u/0/folders/1r3rI7GKN6Bz0LsGPCiMcD-wVdAtI1Koh/stuff/rubik.pdf&embedded=true" style="width:500px; height:375px;" frameborder="0"></iframe>
+url=https://drive.google.com/drive/u/0/folders/1r3rI7GKN6Bz0LsGPCiMcD-wVdAtI1Koh&embedded=true" style="width:500px; height:375px;" frameborder="0"></iframe>
 
             <div class="think__details">
                 <div class="think__details__icon">
