--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -51,7 +51,8 @@
 
         <div class="think">
             <div class="think__img">
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTMzj7cfxEIrTcfn1wG7Y4599n0yTR_eL_xtAqexgXiDjpZ3W78AgQ45YGibdNUAV_Z3T9KFa6Sz3O0/pub?embedded=true"height="560"width="560"></iframe>
+             <iframe src="https://docs.google.com/document/d/e/2PACX-1vTMzj7cfxEIrTcfn1wG7Y4599n0yTR_eL_xtAqexgXiDjpZ3W78AgQ45YGibdNUAV_Z3T9KFa6Sz3O0/pub?embedded=true"height="560"width="560"></iframe>
+            </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
