--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -84,7 +84,7 @@
                     <p class="think__details__extra__description">En la creación de equipos se asignan roles principales y secundarios.</p>
                     <br>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1L0N1IZaw4q0WcoVhj6nV1DBS4MiyI2Kw/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/drive/u/0/folders/1r3rI7GKN6Bz0LsGPCiMcD-wVdAtI1Koh" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
