--- a/Actividades/Actividad6.html
+++ b/Actividades/Actividad6.html
@@ -90,10 +90,11 @@
                 <div class="footer__licencia">
                     <p>Licencia:</p>
                     <img src="../img/licencia.png" alt="">
+                    <p>All Rights Reserved</p>
                 </div>
                 <div class="footer__copy">
                     <img src="../img/fablab.png" alt="">
-                    <p>&copy; 2018 - Diseñado por: <a href="colocar_correo_@tecsup.edu.pe">Colocar el nombre del editor de la página.</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:marvinroodwell.balle@tecsup.edu.pe"><H3><i>ROODWELL<i></H3></a></p>
                 </div>
             </div>
         </footer>
