--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -51,8 +51,8 @@
 
         <div class="think">
             <div class="think__img">
-             <iframe src="https://docs.google.com/document/d/e/2PACX-1vTMzj7cfxEIrTcfn1wG7Y4599n0yTR_eL_xtAqexgXiDjpZ3W78AgQ45YGibdNUAV_Z3T9KFa6Sz3O0/pub?embedded=true"height="560"width="560"></iframe>
-            </div>
+             <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ8WxW2RK1i9Gc3uK76p_ebdmZje0bcJ1d5Q6u83hwT7HMHBKF9VwS0Y1bCgnKnu7SpnYOuStHYEiFc/pub?embedded=true"height="560"width="560"></iframe>
+           </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
@@ -84,7 +84,7 @@
                     <p class="think__details__extra__description">En la creación de equipos se asignan roles principales y secundarios.</p>
                     <br>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/drive/u/0/folders/1r3rI7GKN6Bz0LsGPCiMcD-wVdAtI1Koh" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/1piVt8GcK-2Gy0fz7Hzia1aiFCvRRiujt/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
