--- a/Proyecto_Innovacion.html
+++ b/Proyecto_Innovacion.html
@@ -19,8 +19,8 @@
     <div class="nav-toggle" id="main-nav-toggle"><i class="icon-navicon"></i></div>
     <nav class="main-nav" id="main-nav">
 		<ul class="main-menu" id="main-menu">
-			<li><a href="index.html">Inicio</a></li>
-            <li><a href="">Acerca de Nosotros</a>
+			<li><a href="index.html">Home</a></li>
+            <li><a href="">About Us</a>
 				<ul>
                    <li><a href="Integrante1.html">Jorge Aguero</a></li>
                    <li><a href="Integrante2.html">Marvin Ballenas</a></li>
@@ -45,7 +45,7 @@
     <div id="projectsFinal">
         <div class="projectsFinal__title">
             <div class="projectsFinal__title__text">
-                <h1>Proyecto <span>Innovación</span></h1>
+                <h1>INNOVATION <span>PROJECT</span></h1>
             </div>
         </div>
         <div class="projectsFinal">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2018 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
                 </div>
             </div>
         </footer>
