--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </div>
                     <div class="team__item__description">
                       <p class="team__item__description__name">Ricardo Tenorio</p>
-                      <p class="team__item__description__info">Las actividades que requieren gran habilidad y rapidez mental, son lo mío. Me gusta aprender nuvas formas de hacer las cosas.</p>
+                      <p class="team__item__description__info">Las actividades que requieren gran habilidad y rapidez mental, son lo mío. Me gusta aprender nuevas formas de hacer las cosas.</p>
                       <p class="team__item__description__cal">My Main Role in this Project: <strong>Constructor</strong></p>
                       <p class="team__item__description__cal">My Secondary Role: <strong>Explorador</strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>959186504</strong></p>
